--- a/public/assets/CSS/Sign Up.CSS
+++ b/public/assets/CSS/Sign Up.CSS
@@ -5,8 +5,8 @@
 
 #div41{
 
-    width: 440px;
-    height: 550px;
+    width: 900px;
+    height: 700px;
     background-color: white;
     margin: 100px 0 0 385px;
     border-top-left-radius: 15px ;
@@ -97,4 +97,111 @@
     margin: 100px 0 0 0;
     border-top-right-radius: 15px ;
     border-bottom-right-radius: 15px ;
+}
+
+/* ========================= start regester style =========================*/
+.login__container{
+    display: flex;
+    margin-inline: auto;
+    align-items: center;
+    margin-block: 6rem;
+    justify-content: center;
+    gap: 3rem;
+    height: fit-content;
+    max-height: 680px;
+    border-radius: 20px;
+    background: #ffffff;
+    box-shadow:  5px 5px 10px #d9d9d9,
+                 -5px -5px 10px #ffffff;
+}
+.login__container > div{
+    flex: 1;
+    overflow: hidden;
+}
+
+.login__form__container{
+    display: grid;
+    gap: 1rem;
+    align-items: center;
+    padding: 2rem;
+    justify-content: stretch;
+}
+.login__form__container title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.login__form__container .logo__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 4rem;
+}
+
+.login__form__container form{
+    display: grid;
+    align-items: start;
+    gap: 1.2rem;
+}
+.login__form__container form input#email , 
+.login__form__container form input#pass,
+.login__form__container form input {
+    margin: 0 !important;
+    width: 100% !important;
+    display: block;
+    padding: 1.7rem 1.2rem;
+    min-height: 2rem;
+    border-radius: 10px !important;
+    font-size: 1.2rem;
+
+}
+
+.remember__passwordreset__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.1rem;
+}
+.sub__btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:3rem ;
+}
+.reset__pass{
+    color: #DB8383;
+    font-size: 1.2rem;
+}
+.login__form__container form button[type='submit']{
+    padding: 0.8rem 4rem ;
+    margin-inline: auto;
+    display: inline-block;
+    height: unset;
+    text-align: center;
+    min-width: 6rem;
+    font-size: 1.2rem;
+    background: #E4A2A2;
+    border:1px solid #DB8383;
+    border-radius: 100px;
+    color: #fff;
+}
+
+.login__image__container {
+    display: block;
+    height: 100%;
+    max-height: 100vh;
+    overflow: hidden;
+}
+.login__image__container img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+
+}
+body{
+    /* max-width: 100vw !important; */
+    /* overflow-x: hidden; */
 }
