--- a/public/assets/CSS/nav.css
+++ b/public/assets/CSS/nav.css
@@ -86,3 +86,32 @@ nav#div1{
     background-color: #FFE3E3;
 }
 
+.nav__bar{
+    max-width: 100vw !important;
+    background-color: #FFE3E3;
+}
+.nav__bar .container{
+    max-width: 1110px;
+    margin-inline: auto;
+}
+.nav__bar .main__navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 1rem;
+}
+.nav__bar .main__navbar a{
+    margin:0 !important
+}
+.nav__bar .main__navbar .nav__menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.nav__bar .main__navbar .icons__container{
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    align-items: center;
+}
