--- a/public/assets/CSS/Home.CSS
+++ b/public/assets/CSS/Home.CSS
@@ -500,7 +500,7 @@
     background-color: #FFE3E3 ;
     width: 1519px;
     height: 740px;
-    
+
 }
 
 
@@ -526,15 +526,15 @@
     margin: 100px 0 0 0;
 }
 
-#div23 p,
-#div23 h4,
-#div23 a {
-    position: absolute;
-    bottom: 30px;
-    left: 30px;
-    color: #fff;
+/*#div23 p,*/
+/*#div23 h4,*/
+/*#div23 a {*/
+/*    position: absolute;*/
+/*    bottom: 30px;*/
+/*    left:  } 30px;*/
+/*    color: #fff;*/
 
-}
+/*}*/
 
 
 
